# relevance

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  README.md  TODO.md  apps.yml  pyproject.toml  shell.nix
.github/workflows/: build.yml  docker-build.yml  test.yml
docker/: Dockerfile
scripts/: fdroid_update.py
src/: cache.py  config.py  fdroid.py  main.py  tools.py  utils.py  web.py
src/merge/: merger.py
src/operations/: __init__.py
src/operations/clone/: __init__.py  clone.py
src/operations/patch/: __init__.py  revanced.py
src/sources/: __init__.py  apkpure.py  auto.py  direct.py
