[build-system]
requires = ["setuptools>=68.0", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "relevance"
version = "0.1.0"
description = "A declarative Android app patcher and F-Droid repository builder"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pillow>=10.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
relevance = "src.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
